add shadow mapping for moving entities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -122,6 +122,7 @@
         "any": "cpp",
         "expected": "cpp",
         "filesystem": "cpp",
-        "numbers": "cpp"
+        "numbers": "cpp",
+        "ranges": "cpp"
     }
 }
